@@ -1,5 +1,6 @@
 package nl.tudelft.simulation.dsol.formalisms;
 
+import java.io.Serializable;
 import java.rmi.RemoteException;
 import java.util.Collections;
 import java.util.Comparator;
@@ -7,17 +8,17 @@ import java.util.Iterator;
 import java.util.SortedSet;
 import java.util.TreeSet;
 
+import org.djutils.event.EventProducer;
+import org.djutils.event.EventType;
+
 import nl.tudelft.simulation.dsol.SimRuntimeException;
-import nl.tudelft.simulation.dsol.logger.SimLogger;
 import nl.tudelft.simulation.dsol.simtime.SimTime;
 import nl.tudelft.simulation.dsol.simulators.DEVSSimulatorInterface;
-import nl.tudelft.simulation.event.EventProducer;
-import nl.tudelft.simulation.event.EventType;
 
 /**
  * A resource defines a shared and limited amount.
  * <p>
- * Copyright (c) 2002-2019 Delft University of Technology, Jaffalaan 5, 2628 BX Delft, the Netherlands. All rights reserved. See
+ * Copyright (c) 2002-2020 Delft University of Technology, Jaffalaan 5, 2628 BX Delft, the Netherlands. All rights reserved. See
  * for project information <a href="https://simulation.tudelft.nl/" target="_blank"> https://simulation.tudelft.nl</a>. The DSOL
  * project is distributed under a three-clause BSD-style license, which can be found at
  * <a href="https://simulation.tudelft.nl/dsol/3.0/license.html" target="_blank">
@@ -29,7 +30,7 @@ import nl.tudelft.simulation.event.EventType;
  * @param <T> the simulation time type to use.
  * @since 1.5
  */
-public class Resource<A extends Comparable<A>, R extends Number & Comparable<R>, T extends SimTime<A, R, T>>
+public class Resource<A extends Comparable<A> & Serializable, R extends Number & Comparable<R>, T extends SimTime<A, R, T>>
         extends EventProducer
 {
     /** */
@@ -86,6 +87,13 @@ public class Resource<A extends Comparable<A>, R extends Number & Comparable<R>,
         this.description = description;
         this.simulator = simulator;
         this.capacity = capacity;
+    }
+
+    /** {@inheritDoc} */
+    @Override
+    public Serializable getSourceId()
+    {
+        return this.description;
     }
 
     /**
@@ -160,7 +168,7 @@ public class Resource<A extends Comparable<A>, R extends Number & Comparable<R>,
         catch (RemoteException remoteException)
         {
             // This exception cannot occur.
-            SimLogger.always().warn(remoteException, "setCapacity");
+            this.simulator.getLogger().always().warn(remoteException, "setCapacity");
         }
     }
 
@@ -196,7 +204,7 @@ public class Resource<A extends Comparable<A>, R extends Number & Comparable<R>,
         {
             this.alterClaimedCapacity(amount);
             this.simulator.scheduleEventNow(this, requestor, "receiveRequestedResource",
-                    new Object[] {new Double(amount), this});
+                    new Object[] {Double.valueOf(amount), this});
         }
         else
         {
@@ -290,7 +298,8 @@ public class Resource<A extends Comparable<A>, R extends Number & Comparable<R>,
      * @param <R> the relative time type
      * @param <T> the simulation time type to use.
      */
-    public static class Request<A extends Comparable<A>, R extends Number & Comparable<R>, T extends SimTime<A, R, T>>
+    public static class Request<A extends Comparable<A> & Serializable, R extends Number & Comparable<R>,
+            T extends SimTime<A, R, T>>
     {
         /** the priority of the request. */
         private int priority = 5;
