@@ -1,7 +1,6 @@
 package nl.tudelft.simulation.dsol.tutorial.section42;
 
 import nl.tudelft.simulation.dsol.formalisms.eventscheduling.SimEvent;
-import nl.tudelft.simulation.dsol.logger.SimLogger;
 import nl.tudelft.simulation.dsol.simulators.DEVSSimulatorInterface;
 import nl.tudelft.simulation.jstats.distributions.DistContinuous;
 import nl.tudelft.simulation.jstats.distributions.DistUniform;
@@ -10,7 +9,7 @@ import nl.tudelft.simulation.jstats.streams.StreamInterface;
 /**
  * A Warehouse.
  * <p>
- * Copyright (c) 2002-2019 Delft University of Technology, Jaffalaan 5, 2628 BX Delft, the Netherlands. All rights reserved. See
+ * Copyright (c) 2002-2020 Delft University of Technology, Jaffalaan 5, 2628 BX Delft, the Netherlands. All rights reserved. See
  * for project information <a href="https://simulation.tudelft.nl/" target="_blank"> https://simulation.tudelft.nl</a>. The DSOL
  * project is distributed under a three-clause BSD-style license, which can be found at
  * <a href="https://simulation.tudelft.nl/dsol/3.0/license.html" target="_blank">
@@ -46,11 +45,11 @@ public class Warehouse implements SellerInterface
         try
         {
             this.simulator.scheduleEvent(new SimEvent.TimeDouble(this.simulator.getSimulatorTime() + this.leadTime.draw(), this,
-                    buyer, "receiveProduct", new Long[] {new Long(amount)}));
+                    buyer, "receiveProduct", new Long[] {Long.valueOf(amount)}));
         }
         catch (Exception exception)
         {
-            SimLogger.always().error(exception, "order");
+            this.simulator.getLogger().always().error(exception, "order");
         }
     }
 }
