@@ -14,8 +14,8 @@ import java.util.Map;
 import javax.swing.table.AbstractTableModel;
 
 import org.djutils.immutablecollections.ImmutableCollection;
+import org.djutils.logger.CategoryLogger;
 
-import nl.tudelft.simulation.dsol.logger.SimLogger;
 import nl.tudelft.simulation.dsol.swing.introspection.table.DynamicTableModel;
 import nl.tudelft.simulation.introspection.AbstractProperty;
 import nl.tudelft.simulation.introspection.Introspector;
@@ -25,7 +25,7 @@ import nl.tudelft.simulation.introspection.beans.BeanIntrospector;
 /**
  * A tablemodel used to manage and present the instances of a composite property.
  * <p>
- * Copyright (c) 2002-2019 Delft University of Technology, Jaffalaan 5, 2628 BX Delft, the Netherlands. All rights reserved. See
+ * Copyright (c) 2002-2020 Delft University of Technology, Jaffalaan 5, 2628 BX Delft, the Netherlands. All rights reserved. See
  * for project information <a href="https://simulation.tudelft.nl/" target="_blank"> https://simulation.tudelft.nl</a>. The DSOL
  * project is distributed under a three-clause BSD-style license, which can be found at
  * <a href="https://simulation.tudelft.nl/dsol/3.0/license.html" target="_blank">
@@ -129,7 +129,7 @@ public class CollectionTableModel extends AbstractTableModel implements Introspe
      */
     private void addValue(final Object value)
     {
-        Integer nextKey = new Integer(this.maxKey++);
+        Integer nextKey = Integer.valueOf(this.maxKey++);
         this.keys.add(nextKey);
         this.instances.put(nextKey, value);
     }
@@ -154,7 +154,7 @@ public class CollectionTableModel extends AbstractTableModel implements Introspe
     {
         if (columnIndex == 0)
         {
-            return new Integer(rowIndex);
+            return Integer.valueOf(rowIndex);
         }
         if (columnIndex == 1)
         {
@@ -266,7 +266,7 @@ public class CollectionTableModel extends AbstractTableModel implements Introspe
         }
         catch (Exception e)
         {
-            SimLogger.always().warn(e, "createRow: Could not instantiate new instance: ");
+            CategoryLogger.always().warn(e, "createRow: Could not instantiate new instance: ");
         }
     }
 
