@@ -21,7 +21,7 @@ import nl.tudelft.simulation.dsol.swing.introspection.sortable.SortingTableHeade
  * (c) 2002-2019-2004 <a href="https://simulation.tudelft.nl">Delft University of Technology </a>, the Netherlands. <br>
  * See for project information <a href="https://simulation.tudelft.nl">www.simulation.tudelft.nl </a>.
  * <p>
- * Copyright (c) 2002-2019 Delft University of Technology, Jaffalaan 5, 2628 BX Delft, the Netherlands. All rights reserved. See
+ * Copyright (c) 2002-2020 Delft University of Technology, Jaffalaan 5, 2628 BX Delft, the Netherlands. All rights reserved. See
  * for project information <a href="https://simulation.tudelft.nl/" target="_blank"> https://simulation.tudelft.nl</a>. The DSOL
  * project is distributed under a three-clause BSD-style license, which can be found at
  * <a href="https://simulation.tudelft.nl/dsol/3.0/license.html" target="_blank">
@@ -49,14 +49,14 @@ public final class PTestSorter
     public static void main(final String[] args)
     {
         TableModel unsorted = new DefaultTableModel(
-                new Object[][] {{"fruit", "apple", new Integer(200), "1"}, {"car", "BMW 3", new Integer(1980), "2"},
-                        {"nation", "America", new Integer(1776), "3"}, {"nation", "Germany", new Integer(1024), "4"},
-                        {"nation", "England", new Integer(500), "5"}, {"nation", "Scotland", new Integer(1666), "6"},
-                        {"nation", "Russia", new Integer(200), "7"}, {"nation", "France", new Integer(1789), "8"},
-                        {"nation", "Belgium", new Integer(1820), "9"}, {"nation", "Pakistan", new Integer(1960), "10"},
-                        {"nation", "Israel", new Integer(1945), "11"}, {"nation", "Palestina", new Integer(2004), "12"},
-                        {"nation", "Iraq", new Integer(1300), "13"}, {"nation", "China", new Integer(-2000), "14"},
-                        {"nation", "Peru", new Integer(-3000), "15"}, {"nation", "Nigeria", new Integer(-2000), "16"}},
+                new Object[][] {{"fruit", "apple", Integer.valueOf(200), "1"}, {"car", "BMW 3", Integer.valueOf(1980), "2"},
+                        {"nation", "America", Integer.valueOf(1776), "3"}, {"nation", "Germany", Integer.valueOf(1024), "4"},
+                        {"nation", "England", Integer.valueOf(500), "5"}, {"nation", "Scotland", Integer.valueOf(1666), "6"},
+                        {"nation", "Russia", Integer.valueOf(200), "7"}, {"nation", "France", Integer.valueOf(1789), "8"},
+                        {"nation", "Belgium", Integer.valueOf(1820), "9"}, {"nation", "Pakistan", Integer.valueOf(1960), "10"},
+                        {"nation", "Israel", Integer.valueOf(1945), "11"}, {"nation", "Palestina", Integer.valueOf(2004), "12"},
+                        {"nation", "Iraq", Integer.valueOf(1300), "13"}, {"nation", "China", Integer.valueOf(-2000), "14"},
+                        {"nation", "Peru", Integer.valueOf(-3000), "15"}, {"nation", "Nigeria", Integer.valueOf(-2000), "16"}},
                 new String[] {"category", "instance", "date", "entry"});
         TableModel sorted = new SortingObjectTableModel(unsorted);
 
